Odstránené nepotrebné súbory
- Vymazané duplikáty: pom 2.xml, dashboard 2.fxml
- Vymazané databázové súbory (.db)
- Vymazané build priečinky (target/)
- Vymazaný .cursor/ priečinok